--- a/index.css
+++ b/index.css
@@ -1,3 +1,66 @@
+/** @format */
+
 #heading {
-    color: blue;
+  color: blue;
+}
+
+.header {
+  display: flex;
+  margin: 5px;
+  border: 1px solid black;
+  justify-content: space-between;
+}
+
+.logo {
+  width: 80px;
+  height: 80px;
+  margin: 3px;
+}
+.nav-items {
+  padding: 0px 20px;
+}
+.nav-items > ul {
+  display: flex;
+  margin: 10 px 10px;
+
+  list-style-type: none;
+}
+.nav-items > ul > li {
+  padding: 5px;
+  margin: 10px;
+  font-size: 20px;
+}
+
+.body {
+  width: 100%;
+}
+.res-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+.res-card {
+  width: 200px;
+
+  background-color: #f0f0f0;
+  margin: 5px;
+
+  padding: 5px;
+  font-size: 12px;
+}
+.res-card :hover {
+  cursor: pointer;
+}
+.search {
+  padding: 10px;
+}
+.res-logo {
+  width: 100%;
+  height: 120px;
+}
+.card:hover {
+  border: 1px solid black;
+}
+.filter-btn {
+  margin: 5px;
+  cursor: pointer;
 }
